# ai-agent-resume-guard

./: .gitignore  ACTIVE_VERSION.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  continuity_failure.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
docs/: ADAPTER_CONTRACT.md  ARCHITECTURE.md  FIELD_LESSONS.md  INTEGRATIONS.md  LAUNCH_COPY.md  RELEASE_CHECKLIST.md
examples/: SESSION_HANDOFF.md  hermes-SESSION_HANDOFF.md  hermes-adapter-export.json  hermes-session-manifest.json  multi-lineage-adapter-export.json  openclaw-adapter-export.json  openclaw-session-manifest.json  session-manifest.json
scripts/: prepublish_check.sh  privacy_check.sh
src/ai_agent_resume_guard/: __main__.py  adapter_exports.py  cli.py  handoff.py  scaffold.py  sessions.py  validation.py
src/ai_agent_resume_guard/schemas/: adapter-export.schema.json  policy.schema.json  session-manifest.schema.json
src/ai_agent_resume_guard/templates/: hermes.md  openclaw.md
tests/: test_cli.py  test_project_files.py
