[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-resume-guard"
version = "0.1.0"
description = "Safe resume and handoff guard for Hermes, OpenClaw, and multi-agent AI systems, so agents do not continue stale work."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "AI Agent Resume Guard contributors" }
]
keywords = [
  "ai-agents",
  "agent-memory",
  "agentops",
  "continuity",
  "context-engineering",
  "handoff",
  "hermes",
  "multi-agent",
  "openclaw",
  "recall",
  "safe-resume"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/giugiu-a11y/ai-agent-resume-guard"
Repository = "https://github.com/giugiu-a11y/ai-agent-resume-guard"
Issues = "https://github.com/giugiu-a11y/ai-agent-resume-guard/issues"

[project.optional-dependencies]
dev = [
  "build>=1.4.4",
  "pytest>=9.0.3",
  "ruff>=0.15.14",
  "twine>=6.2.0"
]

[project.scripts]
agent-resume-guard = "ai_agent_resume_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_agent_resume_guard = ["schemas/*", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP006", "UP007"]
